// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hero three parts fullheight success 1`] = `
<section
  className="hero is-fullheight is-info"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar "
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item is-active"
          >
            Home
          </a>
          <a
            className="navbar-item "
          >
            Examples
          </a>
          <a
            className="navbar-item "
          >
            Documentation
          </a>
          <a
            className="navbar-item "
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
              onClick={[Function]}
            >
              <span>
                Github
              </span>
              <span
                className="icon"
              >
                <i
                  aria-hidden="true"
                  className="fab fa-github"
                />
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="is-active"
        >
          <a>
            Overview
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Modifiers
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Grid
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Elements
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Components
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`hero three parts fullheight success 2`] = `
<section
  className="hero is-fullheight is-success"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar "
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item is-active"
          >
            Home
          </a>
          <a
            className="navbar-item "
          >
            Examples
          </a>
          <a
            className="navbar-item "
          >
            Documentation
          </a>
          <a
            className="navbar-item "
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
              onClick={[Function]}
            >
              <span>
                Github
              </span>
              <span
                className="icon"
              >
                <i
                  aria-hidden="true"
                  className="fab fa-github"
                />
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="is-active"
        >
          <a>
            Overview
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Modifiers
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Grid
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Elements
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Components
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;

exports[`hero three parts medium primary 1`] = `
<section
  className="hero is-medium is-primary"
>
  <div
    class="hero-head"
  >
    <nav
      className="navbar "
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
        >
          <img
            src="https://bulma.io/images/bulma-type-white.png"
          />
        </a>
      </div>
      <div
        className="navbar-menu"
      >
        <div
          className="navbar-start"
        >
          
        </div>
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item is-active"
          >
            Home
          </a>
          <a
            className="navbar-item "
          >
            Examples
          </a>
          <a
            className="navbar-item "
          >
            Documentation
          </a>
          <a
            className="navbar-item "
          >
            <button
              className="button is-primary is-inverted"
              disabled={false}
              onClick={[Function]}
            >
              <span>
                Github
              </span>
              <span
                className="icon"
              >
                <i
                  aria-hidden="true"
                  className="fab fa-github"
                />
              </span>
            </button>
          </a>
        </div>
      </div>
    </nav>
  </div>
  <div
    className="hero-body"
  >
    <div
      className="container has-text-centered"
    >
      <h1
        className="title is-1"
      >
        Title
      </h1>
      <h2
        className="subtitle is-2"
      >
        Subtitle
      </h2>
    </div>
  </div>
  <div
    class="hero-foot"
  >
    <div
      className="tabs is-boxed is-fullwidth"
    >
      <ul>
        <li
          className="is-active"
        >
          <a>
            Overview
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Modifiers
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Grid
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Elements
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Components
          </a>
        </li>
        <li
          className=""
        >
          <a>
            Layout
          </a>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
